@startuml
'https://plantuml.com/class-diagram
hide empty members

class MapaRenderer
class UIRenderer
class SpriteManager

MapaRenderer *-- GridPane : mapaGrid
MapaRenderer *-- StackPane : mapaStackPane
MapaRenderer *-- ScrollPane : mapaScrollPane
MapaRenderer *-- SpriteManager : sprites
MapaRenderer ..> Partida : render(partida)
MapaRenderer ..> Zona : zonaActual para dibujar
MapaRenderer ..> ImageView : crea por celda
MapaRenderer ..> WritableImage : recorta tiles
MapaRenderer ..> PixelReader : lee fondo.png
MapaRenderer : +render(Partida)\n+getEntidadSprite(Celda): ImageView\n-Lista<Matrix<Image>> cacheCeldas

UIRenderer *-- Label : zonaLabel, turnoLabel, vidaLabel
UIRenderer *-- ProgressBar : vidaBar
UIRenderer *-- TextArea : logArea
UIRenderer *-- ListView : inventarioList
UIRenderer *-- TextArea : objetosUsadosArea
UIRenderer *-- TextArea : objetosEquipadosArea
UIRenderer ..> Partida : actualizarUI(partida)
UIRenderer ..> LogMovimiento : lee entradas
UIRenderer ..> Inventario : lee objetos
UIRenderer : +actualizarUI(Partida)\n+limpiarLog()\n-int ultimoLogIndex

SpriteManager ..> Image : getSprite(ruta)
SpriteManager : +getJugadorSprite()\n+getGatoSprite()\n+getEnemigoSprite()\n+getNPCSprite(nombre)\n+getObjetoSprite(nombre)\n+getZonaBackground(idZona)
@enduml
